<resources>
    <string name="app_name">DIGIPDESA</string>
    <string name="general_image_content_description">This is an image</string>
    <string name="general_action_ok">Oke</string>
    <string name="general_action_yes">Yes</string>
    <string name="general_action_no">No</string>
    <string name="general_action_save">Simpan</string>
    <string name="general_action_cancel">Cancel</string>
    <string name="general_action_submit">Submit</string>
    <string name="general_action_search">Search</string>
    <string name="general_action_export">Export</string>
    <string name="general_action_select">Select</string>
    <string name="general_action_send">Kirim</string>
    <string name="general_action_account">Akun</string>
    <string name="general_action_see_all">Lihat Semua</string>
    <string name="general_captio_all">Semua</string>
    <string name="general_success">Berhasil</string>
    <string name="general_name">Nama</string>
    <string name="login_title">Login</string>
    <string name="login_new_password_title">Password Baru</string>
    <string name="login_ktp_number_label">No. KTP</string>
    <string name="login_ktp_number_hint">Masukkan Nomor KTP</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_hint">Masukkan Password</string>
    <string name="login_email_hint">Alamat Email</string>
    <string name="login_re_password_hint">Ulangi Password</string>
    <string name="login_button_login_label">Login</string>
    <string name="login_ktp_number_error_16_digit">Nomor KTP harus 16 digit</string>
    <string name="action_settings">Settings</string>
    <string name="input_email_header">Kami akan mengirimkan email berupa form untuk ubah password, jika Kamu sudah menambahkan email pada akun Kamu </string>
    <string name="input_password_forgot_password_label">Lupa password</string>
    <string name="input_password_create_password_label">Buat password</string>
    <string name="input_password_has_account_header">Selanjutnya masukkan password untuk login ke aplikasi DIGIPDESA</string>
    <string name="input_password_has_not_account_header">Ini pertama kali Kamu login di aplikasi DIGIPDESA, buat password untuk mengamankan akun Kamu.</string>
    <string name="input_password_has_reseted_header">Karena sebelumnya Kamu sudah ke kelurahan untuk mereset password, Kamu harus buat password baru.</string>
    <string name="input_password_has_account_footer">Jika Kamu tidak pernah merasa Login pada aplikasi DIGIPDESA, maka Kamu harus ke kelurahan yang sesuai dengan KTP Kamu untuk mereset password pada akun Kamu.</string>
    <string name="input_password_error_7_digit">Password minimal 7 digit</string>
    <string name="input_password_error_not_match">Password berbeda</string>
    <string name="logout_headline">Logout</string>
    <string name="logout_subheadline">Are you sure you want to Logout?</string>
    <string name="home_button_logout_label">Logout</string>
    <string name="menu_camera">Scan</string>
    <string name="menu_history">History</string>
    <string name="menu_container">Container</string>
    <string name="menu_report">Report</string>
    <string name="detail_container_title">Container Details</string>
    <string name="history_serch_hint">Enter container code</string>
    <string name="history_batch">Batch ID = %s</string>
    <string name="history_seal_number">Seal Number = %s</string>
    <string name="history_voyage_in">Voyage ID In = %s</string>
    <string name="history_voyage_out">Voyage ID Out = %s</string>
    <string name="history_so_number">SO Number = %s</string>
    <string name="history_empty_state_label">No container data has been recorded yet</string>
    <string name="roof_side_label">Roof :</string>
    <string name="floor_side_label">Floor :</string>
    <string name="door_side_label">Door :</string>
    <string name="back_side_label">Back :</string>
    <string name="left_side_label">Left :</string>
    <string name="right_side_label">Right :</string>
    <string name="select_Location_Label">Select Location</string>
    <string name="select_condition_label">Select Condition</string>
    <string name="tools_text_label">Label</string>
    <string name="tools_text_title_headline">Title Headline</string>
    <string name="scanner_title">Scan QR</string>
    <string name="scanner_title_toolbar">Scan QR %s</string>
    <string name="scanner_success_save_data_label">Successfully save data</string>
    <string name="voyage_number_label">Voyage Id</string>
    <string name="voyage_number_hint">Enter container voyage id</string>
    <string name="seal_number_label">Seal Number</string>
    <string name="seal_number_hint">Enter container seal number</string>
    <string name="container_condition_title">Container Condition</string>
    <string name="condition_label">Condition :</string>
    <string name="so_number_label">Sales Order Number</string>
    <string name="select_so_number_label">Select Sales Order Number</string>
    <string name="so_number_serch_hint">Search Sales Order Number</string>
    <string name="so_number_empty_state_label">No sales order number data</string>
    <string name="dashboard_welcome_label">Selamat Datang</string>
    <string name="dashboard_intro_label">DIGIPDESA merupakan aplikasi untuk memudahkan Kamu mengajukan surat secara digital</string>
    <string name="dashboard_register_button_label">Registrasi Data Sekarang</string>
    <string name="dashboard_select_letter_button_label">Pilih Jenis Surat</string>
    <string name="dashboard_select_letter_caption">Surat apa yang ingin Kamu ajukan hari ini?</string>
    <string name="dashboard_need_approval_caption">Butuh Persetujuan</string>
    <string name="dashboard_submission_list_caption">Daftar Pengajuan</string>
    <string name="dashboard_must_regist_first_headline">Kamu Harus Registrasi Terlebih Dahulu</string>
    <string name="dashboard_must_regist_first_subheadline">Kamu tidak bisa akses ke menu ini, karena harus mengisi registrasi data terlebih dahulu.</string>
    <string name="dashboard_coming_soon_headline">Akan Segera Hadir</string>
    <string name="dashboard_coming_soon_complaint_service">Layanan Pengaduan Desa</string>
    <string name="dashboard_coming_soon_village_news">Berita Desa</string>
    <string name="letter_list_empty_state_caption">Belum ada daftar pengajuan</string>
    <string name="letter_list_waiting_approval_rt_caption">Menunggu Disetujui RT</string>
    <string name="letter_list_waiting_approval_rw_caption">Menunggu Disetujui RW</string>
    <string name="letter_list_waiting_approval_village_caption">Menunggu Disetujui Desa/Kelurahan</string>
    <string name="letter_list_ready_for_pickup_caption">Surat Siap Diambil Di Kelurahan</string>
    <string name="letter_list_need_approval_title">Daftar Surat Persetujuan</string>
    <string name="letter_list_submission_title">Daftar Surat Yang Diajukan</string>
    <string name="letter_list_unsigned_title">Belum Disetujui</string>
    <string name="letter_list_signed_title">Sudah Disetujui</string>
    <string name="letter_detail_approval_ktp_number_title">Nomor KTP</string>
    <string name="letter_detail_submission_title">Rincian Surat Pengajuan</string>
    <string name="letter_detail_id_letter_caption">ID Surat</string>
    <string name="letter_detail_letter_type_caption">Jenis Surat</string>
    <string name="letter_detail_letter_date_submission_caption">Tanggal Diajukan</string>
    <string name="letter_detail_letter_address_submission_caption">Alamat</string>
    <string name="letter_detail_letter_status_caption">Status</string>
    <string name="letter_detail_letter_rejected_caption">Ditolak</string>
    <string name="letter_detail_submission_marker_caption">Surat Diajukan</string>
    <string name="letter_detail_history_approval_caption">Riwayat Persetujuan</string>
    <string name="letter_detail_history_submission_caption">Riwayat Pengajuan</string>
    <string name="letter_detail_approval_rt_marker_caption">Menunggu Disetujui RT</string>
    <string name="letter_detail_has_approval_rt_marker_caption">Sudah Disetujui RT</string>
    <string name="letter_detail_has_rejected_rt_marker_caption">Surat Ditolak RT</string>
    <string name="letter_detail_approval_rw_marker_caption">Menunggu Disetujui RW</string>
    <string name="letter_detail_has_approval_rw_marker_caption">Sudah Disetujui RW</string>
    <string name="letter_detail_has_rejected_rw_marker_caption">Surat Ditolak RW</string>
    <string name="letter_detail_approval_village_marker_caption">Menunggu Disetujui Desa/Kelurahan</string>
    <string name="letter_detail_has_approval_village_marker_caption">Sudah Disetujui Desa/Kelurahan</string>
    <string name="letter_detail_has_rejected_village_marker_caption">Surat Ditolak Desa/Kelurahan</string>
    <string name="letter_detail_ready_to_pickup_marker_caption">Surat Siap Diambil Di Kelurahan</string>
    <string name="letter_detail_already_printed_caption">Surat Sudah Dicetak</string>
    <string name="letter_detail_rejected_caption">Surat Ditolak</string>
    <string name="letter_detail_approved_caption">Surat Sudah Disetujui</string>
    <string name="letter_detail_reason_approval_caption">Alasan</string>
    <string name="letter_detail_see_history_approval_caption">Lihat riwayat persetujuan</string>
    <string name="letter_detail_see_detail_approval_caption">Lihat Detail Pengajuan</string>
    <string name="letter_detail_detail_Submission_title">Detail Pengajuan</string>
    <string name="letter_detail_approve_submission_headline">Mensetujui Surat Pengajuan</string>
    <string name="letter_detail_approve_submission_subheadline">Apakah Kamu yakin untuk mensetujui surat pengajuan ini?</string>
    <string name="letter_detail_approve_submission_title">Setujui Pengajuan</string>
    <string name="letter_detail_button_approve_title">Iya, Setujui</string>
    <string name="letter_detail_button_cancel_title">Tidak</string>
    <string name="letter_detail_reject_submission_headline">Tolak Pengajuan</string>
    <string name="letter_detail_reject_submission_subheadline">Untuk menolak pengajuan, Kamu harus menulis alasan kenapa ingin menolak surat pengajuan ini</string>
    <string name="letter_detail_success_reject_submission_headline">Surat Pengajuan Berhasil Ditolak</string>
    <string name="letter_detail_success_reject_submission_subheadline"><![CDATA[
        Kamu telah menolak surat pengajuan <font color="#484848"><b>%s</b></font> yang diajukan Oleh <font color="#484848"><b>%s</b></font>.
        ]]></string>
    <string name="letter_detail_success_approve_submission_headline">Surat Pengajuan Berhasil Disetujui</string>
    <string name="letter_detail_success_approve_submission_subheadline"><![CDATA[
        Kamu telah mensetujui surat pengajuan <font color="#484848"><b>%s</b></font> yang diajukan Oleh <font color="#484848"><b>%s</b></font>.
        ]]></string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="gallery_label">Galeri</string>
    <string name="camera_label">Kamera</string>
    <string-array name="gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="blood_type">
        <item>A</item>
        <item>B</item>
        <item>A/B</item>
        <item>O</item>
    </string-array>
    <string-array name="religion">
        <item>Islam</item>
        <item>Protestan</item>
        <item>Katolik</item>
        <item>Hindu</item>
        <item>Buddha</item>
        <item>Khonghucu</item>
    </string-array>
</resources>