<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.containertracker.ui.home.HomeFragment"
        android:label="@string/scanner_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_container"
        android:name="com.example.containertracker.ui.container.ContainerFragment"
        android:label="@string/menu_container"
        tools:layout="@layout/fragment_container" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.containertracker.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.containertracker.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />
</navigation>