<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.password.PasswordActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_input_password_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_container"
            android:layout_marginTop="@dimen/icon_default"
            android:layout_marginEnd="@dimen/margin_container"
            android:fontFamily="@font/inter_regular"
            android:lineSpacingExtra="2sp"
            android:text="@string/input_password_has_account_header"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gov.sidesa.ui.widget.InputTextViewWidget
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:layout_marginRight="@dimen/margin_container"
            app:hint="@string/login_password_hint"
            app:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_password_header" />

        <com.gov.sidesa.ui.widget.InputTextViewWidget
            android:id="@+id/input_re_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:layout_marginRight="@dimen/margin_container"
            app:hint="@string/login_re_password_hint"
            app:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_container"
            android:layout_marginEnd="@dimen/margin_container"
            android:layout_marginBottom="@dimen/margin_container"
            android:fontFamily="@font/roboto_regular"
            android:lineSpacingExtra="2sp"
            android:text="@string/input_password_forgot_password_label"
            android:textColor="@color/green_2B7608"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_re_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_container"
            android:layout_marginTop="@dimen/icon_default"
            android:layout_marginEnd="@dimen/margin_container"
            android:background="@drawable/selector_button_corner_radius_6dp"
            android:enabled="false"
            android:text="@string/general_action_save"
            android:textAppearance="@style/Button"
            android:textColor="@color/white_FFFFFF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_forgot_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_input_password_footer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_container"
            android:layout_marginEnd="@dimen/margin_container"
            android:layout_marginBottom="@dimen/margin_container"
            android:fontFamily="@font/inter_regular"
            android:lineSpacingExtra="2sp"
            android:text="@string/input_password_has_account_footer"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>