<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="@dimen/icon_default"
            android:layout_height="@dimen/icon_default"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:layout_margin="@dimen/margin_container"
            android:contentDescription="@string/general_action_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_reject_submission_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:fontFamily="@font/inter_medium"
            android:lineSpacingExtra="2sp"
            android:text="@string/letter_detail_reject_submission_headline"
            android:textColor="@color/black_484848"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_close" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_reject_submission_subheadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:fontFamily="@font/inter_regular"
            android:lineSpacingExtra="2sp"
            android:text="@string/letter_detail_reject_submission_subheadline"
            android:textColor="@color/grey_AAAAAA"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_reject_submission_headline" />

        <com.gov.sidesa.ui.widget.InputTextViewWidget
            android:id="@+id/input_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_container"
            android:layout_marginTop="@dimen/margin_container"
            android:layout_marginRight="@dimen/margin_container"
            app:hint="@string/letter_detail_reason_approval_caption"
            app:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_reject_submission_subheadline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_container"
            android:layout_marginTop="@dimen/icon_default"
            android:layout_marginEnd="@dimen/margin_container"
            android:layout_marginBottom="@dimen/margin_container"
            android:background="@drawable/selector_button_corner_radius_6dp"
            android:enabled="false"
            android:text="@string/general_action_send"
            android:textAppearance="@style/Button"
            android:textColor="@color/white_FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_reason" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>