<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.containertracker.ui.home.HomeViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_FFFFFF"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_FFFFFF"
            android:orientation="vertical">

            <com.example.containertracker.widget.InputTextViewWidget
                android:id="@+id/input_voyage_id"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                app:inputTextViewHint="@string/voyage_number_hint"
                app:inputTextViewLabel="@string/voyage_number_label"
                app:inputTextValue="@={viewModel.voyageId}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_submit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_container"
                android:layout_marginTop="@dimen/icon_default"
                android:background="@drawable/background_button_green"
                android:text="@string/general_action_submit"
                android:textAppearance="@style/Button"
                android:textColor="@color/white_FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_voyage_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>