<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white_FFFFFF"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white_FFFFFF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_header_desc"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_baseline_warning_24" />

            <TextView
                android:id="@+id/title_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="@dimen/margin_container"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="4sp"
                android:text="@string/logout_headline"
                android:textColor="@color/black_484848"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/subtitle_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="8"
                android:text="@string/logout_subheadline"
                android:textColor="@color/black_484848"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_No"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="@dimen/icon_default"
                android:background="@drawable/background_stroke_green_rounded_8dp"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/general_action_no"
                android:textAppearance="@style/Button"
                android:textColor="@color/darkGreen" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Yes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="@dimen/margin_container"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background_button_red"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/general_action_yes"
                android:textAppearance="@style/Button"
                android:textColor="@color/white_FFFFFF" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>